# downstream

./: .clang-format  .gitignore  .gitmodules  404.html  CITATION.cff  Cargo.toml  Dockerfile  Makefile  README.md  benchmark_parity_memory.py  build.zig  build.zig.zon  bumpver.toml  debug_one.py  example.cu  index.html  lint.sh  main.cpp  main.cu  main_cuda.cu  objects.inv  publish.sh  pylib  pyproject.toml  requirements-jit.txt  requirements.in  requirements.sh  requirements.txt  setup.cfg  style.sh  submodules.sh  update.sh  update_cargo.sh  validate.sh  validate_one.py  version.hpp
algorithm/: index.html
citing/: index.html
contributing/: index.html
cpp/: index.html
credits/: index.html
csl/: index.html
docs/: conf.py  contributing.md  installation.md  mkdocs.yml  requirements.in  requirements.sh  requirements.txt  usage.md
downstream/: __init__.py  __init__.pyi  __main__.py  executable.py  run.py  steady_site_selection.py
exe/: main.zig
glossary/: index.html
impl/: _dispatch_assign_storage_site.hpp
joss/: bibtex-tidy.sh  paper.bib  paper.md
projects/: index.html
publications/: index.html
python/: index.html
quickstart/: index.html
rust/: index.html
scripts/: dstream_nop.sh  dstream_test_all.sh  dstream_test_one.sh
search/: search_index.json
src/: _auxlib.csl  _auxlib.rs  _auxlib.zig  lib.rs  main.csl  main.rs  main.zig
src-zig/: main.zig
test/: client.py  compile.sh  execute.sh  kernel.csl  layout.csl  requirements.in  requirements.sh  requirements.txt  test.sh  test_all.sh
test-zig/: test.sh
test_downstream/: test_cli.py  (+8 more)
(+486 files in other folders)
